# Glitter

./: .gitignore  CMakeLists.txt
Glitter/Headers/: shader_c.hpp  shader_s.hpp
Glitter/Sources/: CMakeLists.txt  hello_triangle.cpp  hello_triangle_indexed.cpp  hello_window.cpp
Glitter/Sources/3.3/: CMakeLists.txt  shaders_class.cpp  shaders_interpolation.cpp  shaders_uniform.cpp
